--- a/package.json
+++ b/package.json
@@ -32,9 +32,13 @@
     "baconjs": "^0.7.53",
     "data.future": "^2.3.0",
     "data.maybe": "^1.2.0",
+    "express": "^4.12.3",
     "fantasy-io": "0.0.1",
+    "koa": "^0.18.1",
     "pointfree-fantasy": "^0.1.1",
-    "ramda": "^0.11.0"
+    "ramda": "^0.11.0",
+    "socket.io": "^1.3.5",
+    "socket.io-client": "^1.3.5"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.14",
