--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "watch": "node webpack.hot.server.js",
     "build": "webpack ./app/app.js bundle.js",
     "unit": "karma start karma.conf.js",
-    "e2e": "protractor e2e-tests/protractor.conf.js"
+    "e2e": "protractor e2e-tests/protractor.conf.js",
+    "websocket": "node server/websocket-server.js"
   },
   "repository": {
     "type": "git",
@@ -28,14 +29,9 @@
   "homepage": "https://github.com/kasperstorgaard/chatapp",
   "dependencies": {
     "angular": "^1.3.14",
-    "angular-route": "^1.3.14",
+    "angular-ui-router": "^0.2.13",
     "baconjs": "^0.7.53",
-    "data.future": "^2.3.0",
-    "data.maybe": "^1.2.0",
     "express": "^4.12.3",
-    "fantasy-io": "0.0.1",
-    "koa": "^0.18.1",
-    "pointfree-fantasy": "^0.1.1",
     "ramda": "^0.11.0",
     "socket.io": "^1.3.5",
     "socket.io-client": "^1.3.5"
@@ -44,6 +40,8 @@
     "angular-mocks": "^1.3.14",
     "bower": "^1.3.12",
     "chai": "^2.1.1",
+    "coffee-loader": "^0.7.2",
+    "coffee-script": "^1.9.1",
     "css-loader": "^0.9.1",
     "express": "^4.11.2",
     "html-webpack-plugin": "^1.1.0",
